Fix display of display_name of user/group in share grants
